Fixed XWIKI-1262: Make current cell visible when selected in a table
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki/trunk/web@3401 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-web/standard/src/main/webapp/skins/albatross/wiki.css
+++ b/xwiki-platform-web/standard/src/main/webapp/skins/albatross/wiki.css
@@ -135,6 +135,12 @@
   background-color: #E5F0FE;
 }
 
+.wiki-table .table-head td{
+  font-weight: 100 !important;
+  font-size: 160% !important;
+
+}
+
 .wiki-table .table-odd {
   background-color: #fff;
 }
